Aligned text and new dropdown fix

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -115,32 +115,34 @@ nav .right
 	display: flex;
 	height: 100%;
 	position: relative;
+	align-items: center;
 }
 
 #nav-links a,
 #nav-links .dropdown 
 {
-    padding: 25px;
+    padding: 16px 25px;
     font-size: 1.25em;
     text-transform: uppercase;
     text-shadow: var(--mcTextShadow);
 }
 
-#nav-links .dropdown 
-{
-    padding-bottom: 52px;
+#nav-links .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+#nav-links .dropdown:hover {
+    background: rgba(0, 0, 0, 0.15);
+    border-bottom: none;
+	height: 73px;
+    margin-top: 13px;
 }
 
 #nav-links a:hover 
 {
     background: rgba(0, 0, 0, 0.15);
     border-bottom: solid 5px rgba(0, 0, 0, 0.15);
-}
-
-#nav-links .dropdown:hover 
-{
-    background: rgba(0, 0, 0, 0.15);
-    border-bottom: none;
 }
 
 #nav-links .dropdown:hover a:hover 
